<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"

        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:padding="5dp"

            app:srcCompat="@drawable/ic_chat"
            tools:ignore="VectorDrawableCompat" />



        <EditText
            android:id="@+id/userEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grayBackground"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/userEmailLogin"
            android:inputType="textEmailAddress"
            android:padding="9dp" />

        <EditText
            android:id="@+id/userPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="@color/grayBackground"
            android:ems="10"
            android:hint="@string/userPasswordLogin"
            android:inputType="textPassword"
            android:padding="9dp" />

        <TextView
            android:id="@+id/clickForSignUpLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="3dp"
            android:text="@string/click_for_signup" />

        <Button
            android:id="@+id/loginBtnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/loginBtnLogin"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/googleBtnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/googleBtnLogin"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:cornerRadius="4dp"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/facebookBtnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:textAlignment="center"
                android:drawableLeft="@drawable/ic_facebook"
                android:gravity="right"
                android:padding="15dp"
                android:text="@string/facebookBtnLogin"
                app:cornerRadius="4dp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/signUpPhoneLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
